--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "vite --host",
-    "build": "vite build",
+    "start:dev": "vite build && rm -rf public/* && mv -f dist/* public/ && rm -rf dist && http-server --ssl --cert cert.pem --key key.pem",
+    "build" : "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
